# small_tools

./: .gitignore  Cargo.toml  data.json  prompts.json  readme.md
src/: data.json  lib.rs  main.rs
src/chat_mod/: chat.rs  mod.rs  model.rs  prompt.rs
src/todo_mod/: todo_list.rs
