[package]
name = "small_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
ureq = { version = "3.0.12", features = ["json"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"